--- a/TARGITD3FODataReader/TARGITD3FODataReader.csproj
+++ b/TARGITD3FODataReader/TARGITD3FODataReader.csproj
@@ -60,6 +60,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -74,6 +75,16 @@
   <ItemGroup>
     <None Include="D3FOConnectionManager.snk" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\D3FOConnectionManagerUI\TARGITD3FOConnectionManagerUI.csproj">
+      <Project>{d9e9f29a-532f-4186-805d-f87b6e7dfa98}</Project>
+      <Name>TARGITD3FOConnectionManagerUI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\D3FOConnectionManager\TARGITD3FOConnectionManager.csproj">
+      <Project>{7f791bac-9a89-498b-9d0e-ffa02e8cbbec}</Project>
+      <Name>TARGITD3FOConnectionManager</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>cd $(ProjectDir)
@@ -85,6 +96,11 @@ Echo $(OutDir)
 Echo $(TargetFileName)
 %25GACUTIL%25 -u "$(TargetName)"
 %25GACUTIL%25 -if "$(OutDir)$(TargetFileName)"
+copy "$(OutDir)$(TargetFileName)" "C:\Program Files (x86)\Microsoft SQL Server\110\DTS\PipelineComponents\" /y
+copy "$(OutDir)$(TargetFileName)" "C:\Program Files (x86)\Microsoft SQL Server\120\DTS\PipelineComponents\" /y
+copy "$(OutDir)$(TargetFileName)" "C:\Program Files (x86)\Microsoft SQL Server\130\DTS\PipelineComponents\" /y
+copy "$(OutDir)$(TargetFileName)" "C:\Program Files\Microsoft SQL Server\120\DTS\PipelineComponents\" /y
+copy "$(TargetDir)TARGITD3FODataReader.dll" "D:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\Public Assemblies\" /y
 </PostBuildEvent>
   </PropertyGroup>
 </Project>
