--- a/TARGITD3FODataReader/TARGITD3FODataReader.csproj
+++ b/TARGITD3FODataReader/TARGITD3FODataReader.csproj
@@ -81,6 +81,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="TARGITD3FODataReaderEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TARGITD3FODataReaderInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -100,6 +104,9 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TARGITD3FODataReaderEditor.resx">
+      <DependentUpon>TARGITD3FODataReaderEditor.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
