--- a/TARGITD3FODataReader/TARGITD3FODataReader.csproj
+++ b/TARGITD3FODataReader/TARGITD3FODataReader.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="D3FODataReader.cs" />
+    <Compile Include="DataReaderParser.cs" />
     <Compile Include="Models\DataStructure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
